--- a/cmactions/AndroidManifest.xml
+++ b/cmactions/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <application
         android:allowBackup="true"
-        android:label="@*cyanogenmod.platform:string/device_settings_app_name"
+        android:label="@string/device_settings_app_name"
         android:persistent="true"
         android:icon="@mipmap/ic_launcher_settings"
         android:theme="@android:style/Theme.Material.Settings" >
@@ -56,7 +56,7 @@
 
         <activity
             android:name=".TouchscreenGestureSettings"
-            android:label="@*cyanogenmod.platform:string/screen_gestures_panel_title">
+            android:label="@string/screen_gestures_panel_title">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
